kut git *bitch slap*

--- a/project/.env
+++ b/project/.env
@@ -19,7 +19,8 @@ APP_SECRET=af9b52d64fda7be08b1db2a455724076
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://smtp-relay.sendinblue.com:587?auth_mode=login&username=ricardobettonvil%40gmail.com&password=LcfOmtSVI6ZHKBDr
+
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
